<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MTG Life Counter</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="plus_1">+1</string>
    <string name="minus_1">-1</string>
    <string name="plus_5">+5</string>
    <string name="minus_5">-5</string>
    <string name="reset">Reset</string>
    <string name="format">Format</string>
    <string name="one_player">1P</string>
    <string name="two_players">2P</string>
</resources>
